clean up style theming a bit

--- a/src/app/data-management/data-manager/data-manager.component.html
+++ b/src/app/data-management/data-manager/data-manager.component.html
@@ -2,7 +2,7 @@
 
   <ng-container navbar>
 
-    <app-main-top-nav-bar [config]="vm.navConfig" stylingClass="bg-primary">
+    <app-main-top-nav-bar [config]="vm.navConfig" >
     </app-main-top-nav-bar>
 
     <app-data-property-picker
