--- a/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
+++ b/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
@@ -5,7 +5,7 @@
       <span class="mat-small color-success"> Tilkoblet internett </span>
     </ng-container>
     <ng-template #offlineHeader>
-      <span class="mat-small color-accent">Frakoblet internett</span>
+      <span class="mat-small color-warn">Frakoblet internett</span>
     </ng-template>
 
     <span class="mat-body" *ngIf="config.user">
