--- a/src/app/mission-modules/mission-note-list/mission-note-list/mission-note-list.component.html
+++ b/src/app/mission-modules/mission-note-list/mission-note-list/mission-note-list.component.html
@@ -1,6 +1,6 @@
 <app-main-skeleton [fabs]="fabs">
 
-    <app-main-top-nav-bar navbar [config]="navConfig" stylingClass="bg-primary">
+    <app-main-top-nav-bar navbar [config]="navConfig" >
     </app-main-top-nav-bar>
 
     <div class="max-width">
