--- a/src/app/shared/components/main-skeleton/main-skeleton.component.html
+++ b/src/app/shared/components/main-skeleton/main-skeleton.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" class="h-100" style="position:relative">
 
-  <span class="bg-primary" style="z-index:3;" 
-    [ngClass]="disableElevation ? '' : 'mat-elevation-z3'" >
+  <span style="z-index:3;" class="primary"
+    [ngClass]="disableElevation ? '' : 'mat-elevation-z2'" >
     
     <ng-content select="[navbar]"></ng-content>
 
