--- a/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
+++ b/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar #navBar *ngIf="config" [ngClass]="stylingClass">
+<mat-toolbar #navBar *ngIf="config" [ngClass]="stylingClass" [color]="color">
 
     <ng-container *ngIf="searchBarHidden || !config.searchBar else searchBarContent">
         
