--- a/src/app/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.html
@@ -3,7 +3,7 @@
 
   <div class="swipe-hidden-content" matRipple 
     fxLayout="column" fxLayoutAlign="center center"
-    [ngClass]="swipeButton.colorClass" 
+    [ngClass]="swipeButton.color" 
     (press)="handleSwipeBtnClick($event)">
         <mat-icon class="scale-125">{{ swipeButton.icon }}</mat-icon>
   </div>
