--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-list/user-timesheet-week-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week-list/user-timesheet-week-list.component.html
@@ -1,6 +1,6 @@
 <app-main-skeleton *ngIf="vm$ | async; let vm">
 
-    <app-main-top-nav-bar navbar [config]="vm.navConfig" stylingClass="bg-primary">
+    <app-main-top-nav-bar navbar [config]="vm.navConfig" >
     </app-main-top-nav-bar>
 
     <app-user-timesheet-week-list-view 
