--- a/src/app/data-management/data-manager/data-property-picker/data-property-picker.component.scss
+++ b/src/app/data-management/data-manager/data-property-picker/data-property-picker.component.scss
@@ -4,21 +4,21 @@
     margin:0px $gap-size * 6px;
     .mat-form-field-wrapper{
       .mat-select-value{ 
-        color: $foreground-color !important;
+        color: mat-color($app-primary, default-contrast) !important;
       }
             
       .mat-form-field-label {
         /*change color of label*/
-        color: $foreground-color !important;
+        color: mat-color($app-primary, default-contrast) !important;
        }
       
       .mat-form-field-underline {
         /*change color of underline*/
-        background-color: $foreground-color !important;
+        background-color: mat-color($app-primary, default-contrast)!important;
       } 
 
       .mat-select-arrow{
-        color: $foreground-color !important;
+        color: mat-color($app-primary, default-contrast) !important;
       }
     }
 
