--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="h-100" *ngIf="config$ | async; let config" style="position: unset!important">
 
-  <mat-sidenav fixedInViewport #drawer *ngIf="config" class="mat-elevation-z4 bg-primary" style="width:202px"
+  <mat-sidenav fixedInViewport #drawer *ngIf="config" class="mat-elevation-z4 primary" style="width:202px"
   [attr.role]="config.isXs ? 'dialog' : 'navigation'"
   [mode]="config.isXs ? 'over' : 'side'"
   [opened]="!config.isXs">
@@ -10,9 +10,9 @@
       (navItemClicked)="config.isXs ? toggleDrawer() : null">
     </app-main-side-nav> 
 
-  </mat-sidenav>?
+  </mat-sidenav>
 
-  <mat-sidenav-content fxLayout="column" style="overflow-x:hidden;" class="h-100 bg-primary-light">
+  <mat-sidenav-content fxLayout="column" style="overflow-x:hidden;" class="h-100 primary-light">
 
     <!-- h-100 for iOS Safari fix -->
     <div fxFlex style="position:relative">
@@ -21,7 +21,9 @@
       </div> 
     </div>
 
-    <app-main-bottom-nav fxHide.gt-xs [navigations]="config.bottomNavigations"></app-main-bottom-nav>
+    <app-main-bottom-nav style="z-index:5" class="mat-elevation-z2" fxHide.gt-xs 
+      [navigations]="config.bottomNavigations">
+    </app-main-bottom-nav>
 
   </mat-sidenav-content>
 
