--- a/src/app/login-prompt/login-prompt/login-prompt.component.html
+++ b/src/app/login-prompt/login-prompt/login-prompt.component.html
@@ -1,4 +1,4 @@
-<div class="app-card pt-4 pl-4 pr-4 fadeIn max-width mat-elevation-z2" fxLayout="column" fxLayoutAlign="center stretch">
+<mat-card class="fadeIn" fxLayout="column" fxLayoutAlign="center stretch">
 
   <span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px"  class="mb-4">
     <img src="assets/icons/icon-144x144.png" style="width:40px;height:40px" alt="Logo bilde" />
@@ -8,6 +8,6 @@
 
   <app-login-form (submitted)="authenticate($event)"></app-login-form>
  
-</div>
+</mat-card>
 
 
