--- a/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
+++ b/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
@@ -1,6 +1,6 @@
 <app-main-skeleton *ngIf="vm$ | async; let vm" [fabs]="vm.fabs">
 
-    <app-main-top-nav-bar navbar [config]="vm.navConfig" stylingClass="bg-primary">
+    <app-main-top-nav-bar navbar [config]="vm.navConfig" >
     </app-main-top-nav-bar>
 
     <app-selectable-list #selectableList *ngIf="vm.documents" identifier="id" selectedText="Dokument valgt"
@@ -15,7 +15,7 @@
 </app-main-skeleton>
 
 <ng-template #documentTemplate let-entity>
-    <div class="bg-foreground text-center mat-elevation-z2 p-2 pt-6 pb-6 m-1">
+    <div class="foreground-card text-center mat-elevation-z2 p-2 pt-6 pb-6 m-1">
         <mat-icon [svgIcon]="entity.fileName | fileExtension | fileExtensionIcon" class="scale-150 mb-2"></mat-icon>
         <div>{{ entity.documentType?.name }}</div>
 
