--- a/src/app/mission-modules/mission-image-list/image-viewer/image-viewer.component.html
+++ b/src/app/mission-modules/mission-image-list/image-viewer/image-viewer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="image-toolbar color-accent" fxLayout="row" fxLayoutAlign="space-between center" 
+<mat-toolbar class="overlay_container image_toolbar" fxLayout="row" fxLayoutAlign="space-between center" 
     [fxHide]="toolbarHidden">
     <button mat-icon-button aria-label="Lukk" (click)="close()">
         <mat-icon class="scale-150">chevron_left</mat-icon>
@@ -12,9 +12,9 @@
   (swipeleft)="nextImage()" 
   [src]="currentImage | appFileUrl: 'images'" layout-fill/>
 
-<div class="page_counter" [fxHide]="toolbarHidden">
+<mat-toolbar class="overlay_container page_counter" [fxHide]="toolbarHidden">
   <h5>{{ index + 1 }} / {{ images.length }}</h5>
-</div>
+</mat-toolbar>
 
 
 
