--- a/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
+++ b/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
@@ -1,6 +1,6 @@
 <app-main-skeleton *ngIf="vm$ | async; let vm" [fabs]="vm.fabs">
 
-    <app-main-top-nav-bar navbar [config]="vm.navConfig" stylingClass="bg-primary">
+    <app-main-top-nav-bar navbar [config]="vm.navConfig" >
     </app-main-top-nav-bar>
 
     <app-selectable-list #selectableList 
