--- a/src/app/mission-modules/mission-list/mission-details/mission-details.component.html
+++ b/src/app/mission-modules/mission-list/mission-details/mission-details.component.html
@@ -1,7 +1,7 @@
 
     <app-main-skeleton *ngIf="vm$ | async; let vm">
 
-        <app-detail-top-nav-bar navbar [config]="vm.navConfig" stylingClass="bg-primary">
+        <app-detail-top-nav-bar navbar [config]="vm.navConfig" >
         </app-detail-top-nav-bar>
 
         <app-mission-details-view [mission]="vm.mission">
