--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -1,6 +1,6 @@
 <app-main-skeleton>
 
-  <app-main-top-nav-bar navbar [config]="navConfig" stylingClass="bg-primary">
+  <app-main-top-nav-bar navbar [config]="navConfig" >
   </app-main-top-nav-bar>
 
   <div class="pl-1 pr-1 pb-1 max-width h-100" fxLayout="column" fxLayoutAlign="space-between stretch">
