--- a/src/app/shared-app/components/nav-item/nav-item.component.html
+++ b/src/app/shared-app/components/nav-item/nav-item.component.html
@@ -1,6 +1,6 @@
 <ng-container *ifRole="navButton.allowedRoles">
     <a matRipple *ngIf="navButton.routerLink else categoryButton" 
-        (click)="alertNavigation()" [routerLink]="navButton.routerLink" [routerLinkActive]="['active']">
+        (click)="alertNavigation()" [routerLink]="navButton.routerLink" [routerLinkActive]="['color-accent']">
         <mat-icon>{{navButton.icon}}</mat-icon>
         <span class="ml-2 mr-2">{{navButton.text}}</span>
     </a>
