--- a/src/app/shared/components/detail-top-nav-bar/detail-top-nav-bar.component.html
+++ b/src/app/shared/components/detail-top-nav-bar/detail-top-nav-bar.component.html
@@ -1,17 +1,17 @@
 
-<div class="container" *ngIf="config">
+<div class="container primary" *ngIf="config">
     
     <div *ngIf="config.imgSrc" class="img-container text-center mr-auto ml-auto ">
       <img appImageErrorReloader #img [src]="config.imgSrc" (error)="img.src = '/assets/notfound.png?'" alt="Forsidebilde" />
     </div>
   
     <app-main-top-nav-bar [config]="config" 
-        [stylingClass]="config.imgSrc ? 'detail-navbar-overlay detail-navbar-overlay-top' : 'bg-primary'">
+        [stylingClass]="config.imgSrc ? 'detail-navbar-overlay detail-navbar-overlay-top' : ''">
     </app-main-top-nav-bar>
   
     <mat-toolbar *ngIf="config?.titleLines && config.titleLines.length > 0" 
-      [ngClass]="config.imgSrc ? 'detail-navbar-overlay detail-navbar-overlay-bottom' : 'bg-primary'"
-      class="detail-nav color-foreground">
+      [ngClass]="config.imgSrc ? 'detail-navbar-overlay detail-navbar-overlay-bottom' : ''"
+      class="detail-nav">
   
       <span class="ml-6 mb-2">
           <ng-container *ngFor="let line of config.titleLines; let last = last">
