--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -1,6 +1,6 @@
 <app-main-skeleton>
 
-    <app-main-top-nav-bar navbar [config]="navConfig" stylingClass="bg-primary">
+    <app-main-top-nav-bar navbar [config]="navConfig" >
     </app-main-top-nav-bar>
 
     <div class="pl-1 pr-1 max-width" *ngIf="users$ | async else loading; let users">
