--- a/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -1,7 +1,7 @@
 <app-main-skeleton *ngIf="vm$ | async; let vm">
 
     <ng-container navbar>
-        <app-main-top-nav-bar [config]="vm.navConfig" stylingClass="bg-primary">
+        <app-main-top-nav-bar [config]="vm.navConfig" >
         </app-main-top-nav-bar>
         <app-chips-bar *ngFor="let chips of vm.chipRows; trackBy: trackByChipRow" [chips]="chips.arr">
         </app-chips-bar>
