--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week/user-timesheet-week.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week/user-timesheet-week.component.html
@@ -1,6 +1,6 @@
 <app-main-skeleton *ngIf="vm$ | async; let vm" disableElevation="true">
 
-  <app-main-top-nav-bar navbar [config]="vm.navConfig" stylingClass="bg-primary">
+  <app-main-top-nav-bar navbar [config]="vm.navConfig" >
   </app-main-top-nav-bar>
 
   <div style="min-height:100%" fxLayout="row"
