--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,30 +1,39 @@
 @import '~@angular/material/theming';
 
 $app-primary: mat-palette($mat-brown, 600);
-$app-accent:  mat-palette($mat-yellow, A700, A100);
-$app-warn:    mat-palette($mat-red, A700, A400);
-$app-success: mat-palette($mat-green, A700, A400);
+$app-accent:  mat-palette($mat-yellow, A700);
+$app-warn:    mat-palette($mat-red, A700);
+$app-success: mat-palette($mat-green, A700);
 
-$primary-light: mat-color($app-primary, 100);
 $primary: mat-color($app-primary);
+$primary-light: mat-color($app-primary, lighter);
+$primary-dark: mat-color($app-primary, darker);
 
-$accent-light: mat-color($app-accent, A100);
-$accent: mat-color($app-accent, A700);
+$accent: mat-color($app-accent);
+$accent-light: mat-color($app-accent, lighter);
+$accent-dark: mat-color($app-accent, darker);
 
-$warn: mat-color($app-warn, A700);
-$warn-light: mat-color($app-warn, A400);
-$success: mat-color($app-success, A700);
-$success-light: mat-color($app-success, A400);
+$warn: mat-color($app-warn);
+$warn-light: mat-color($app-warn, lighter);
+$warn-dark: mat-color($app-warn, darker);
 
-$kbtv-client-theme: mat-light-theme($app-primary, $app-accent);
+$success: mat-color($app-success);
+$success-light: mat-color($app-success, lighter);
+$success-dark: mat-color($app-success, darker);
+
+$kbtv-client-theme: mat-light-theme((
+    color: (
+        primary: $app-primary,
+        accent: $app-accent,
+        warn: $app-warn,
+    ),
+));
 
 $background: map-get($kbtv-client-theme, background);
+
 $foreground: map-get($kbtv-client-theme, foreground);
 
-$background-color:$primary-light;
-$foreground-color:white;
-
-$bottom-nav-height: 44;
+$bottom-nav-height: 56;
 
 $gap-size: 4;
 
