--- a/src/styles/app-animations.scss
+++ b/src/styles/app-animations.scss
@@ -17,7 +17,7 @@
   margin-top: -10px;
   margin-left: -10px;
   border-radius: 50%;
-  border: 2px solid $background-color;
+  border: 2px solid $primary-light;
   border-top-color: $primary;
   animation: spinner 0.8s linear infinite;
 }
