list card disable ripple

--- a/src/app/users/user-list/user-card/user-card.component.html
+++ b/src/app/users/user-list/user-card/user-card.component.html
@@ -1,9 +1,9 @@
-<app-list-card [startIcon]="(user.role === Roles.Oppdragsgiver) ? 'work' : 'person'">
+<app-list-card [startIcon]="(user.role === Roles.Oppdragsgiver) ? 'work' : 'person'" rippleDisabled=true>
 
     {{ user.lastName }}, {{ user.firstName }}
 
     <span rightSide fxLayout="row">
-        <a *ngIf="user.phoneNumber" class="color-primary" mat-icon-button href="tel:{{ user.phoneNumber }}">
+        <a *ngIf="user.phoneNumber" class="color-success" mat-icon-button href="tel:{{ user.phoneNumber }}">
             <mat-icon>phone</mat-icon>
         </a>   
         <app-button *ngIf="newPasswordButton && user.role != Roles.Leder" [config]="newPasswordButton"></app-button>
