--- a/src/app/shared-app/components/list-card/list-card.component.html
+++ b/src/app/shared-app/components/list-card/list-card.component.html
@@ -1,4 +1,4 @@
-<mat-card matRipple fxLayout="row" fxLayoutAlign="start center" class="mt-1"> 
+<mat-card matRipple [matRippleDisabled]="rippleDisabled" fxLayout="row" fxLayoutAlign="start center" class="mt-1"> 
 
     <mat-icon>{{ startIcon }}</mat-icon>  
 
