--- a/src/app/mission-modules/mission-note-list/mission-note-list/note-card/note-card.component.html
+++ b/src/app/mission-modules/mission-note-list/mission-note-list/note-card/note-card.component.html
@@ -16,7 +16,7 @@
         </span>
 
 
-        <button *ifRole="RolePresets.Authority" (click)="editNote()" mat-icon-button color="primary"
+        <button *ifRole="RolePresets.Authority" (click)="editNote()" mat-icon-button color="accent"
             aria-label="Rediger notat">
             <mat-icon>edit</mat-icon>
         </button>
