add accent default color to questions

--- a/src/app/shared/dynamic-form/questions/auto-complete-question/auto-complete-question.component.html
+++ b/src/app/shared/dynamic-form/questions/auto-complete-question/auto-complete-question.component.html
@@ -16,7 +16,7 @@
 
 <ng-template #autocomplete let-options="options">
     
-    <mat-form-field [color]="question.color" class="w-100">
+    <mat-form-field [color]="question.color || 'accent'" class="w-100">
         <mat-label *ngIf="question.label">{{ question.label }}</mat-label>
         
         <input matInput [placeholder]="question.placeholder" [formControl]="control" [required]="required"
