new styling form sheets

--- a/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
+++ b/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
@@ -1,4 +1,5 @@
-<mat-toolbar #navBar *ngIf="config" [ngClass]="stylingClass" [color]="color">
+<mat-toolbar #navBar *ngIf="config" [ngClass]="stylingClass" [color]="color" 
+    [ngStyle]="{background: color === 'transparent' ? 'transparent' : ''}">
 
     <ng-container *ngIf="searchBarHidden || !config.searchBar else searchBarContent">
         
