remove success color, replace with accent

--- a/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
+++ b/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar fxLayout="column" fxLayoutAlign="center start" color="primary">
 
     <ng-container *ngIf="config.isOnline else offlineHeader">
-      <span class="mat-small color-success"> Tilkoblet internett </span>
+      <span class="mat-small color-accent"> Tilkoblet internett </span>
     </ng-container>
     <ng-template #offlineHeader>
       <span class="mat-small color-warn">Frakoblet internett</span>
