--- a/src/app/timesheet-modules/shared-timesheet/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/timesheet-modules/shared-timesheet/components/timesheet-card/timesheet-card.component.html
@@ -34,7 +34,7 @@
     </span>
 
     <ng-template #closedIcon>   
-      <span fxLayout="column" fxLayoutAlign="start center" class="color-success">
+      <span fxLayout="column" fxLayoutAlign="start center" class="color-accent">
         <mat-icon>lock</mat-icon>
         <span class="mat-caption">låst</span>
       </span>
