--- a/src/app/timesheet-modules/shared-timesheet/components/timesheet-summary-card-content/timesheet-summary-card-content.component.html
+++ b/src/app/timesheet-modules/shared-timesheet/components/timesheet-summary-card-content/timesheet-summary-card-content.component.html
@@ -16,7 +16,7 @@
           Åpen
         </span>
         <ng-template #confirmed>
-          <span class="mat-subheading-2 m-0 color-success line-height-100"
+          <span class="mat-subheading-2 m-0 color-accent line-height-100"
             >Alle timer låst
           </span>
         </ng-template>
